--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,7 +32,9 @@
 		"mhutchie.git-graph",
 		"dbaeumer.vscode-eslint",
 		"johnpapa.vscode-peacock",
-		"humao.rest-client"
+		"humao.rest-client",
+		"golang.Go",
+		"TabNine.tabnine-vscode"
 	]
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
