--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ DSN_TEST=":memory:"
 ENV="dev"
 DEBUG=true
 AUTO_MIGRATE_DB=true
+
+localstoragePath="/tmp"
+GOOGLE_APPLICATION_CREDENTIALS="bucket-credentials.json"
