chore: alterado variavel de ambiente para salvar os arquivos fragmentados

--- a/.env
+++ b/.env
@@ -8,5 +8,5 @@ ENV="dev"
 DEBUG=true
 AUTO_MIGRATE_DB=true
 
-localstoragePath="/tmp"
-GOOGLE_APPLICATION_CREDENTIALS="bucket-credentials.json"
+localStoragePath="/go/fragmented_videos"
+GOOGLE_APPLICATION_CREDENTIALS="/go/src/bucket-credentials.json"
